Use List instead of LinkedList